update components intl

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,3 +1,9 @@
 {
-  
+  "brand.subtitle": "IP information's Tool",
+  "ip.informations.title": "Your IP:",
+  "ip.informations.btn": "General",
+  "ip.data.table.title": "Your IP Information:",
+  "faq.title": "FAQ",
+  "contact.us.title": "Contact Us",
+  "links.title": "Follow Us:"
 }
