--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -1,3 +1,9 @@
 {
-  
+  "brand.subtitle": "ابزاری برای دریافت اطلاعات آی پی",
+  "ip.informations.title": "آی پی عمومی شما در حال حاضر:",
+  "ip.informations.btn": "عمومی",
+  "ip.data.table.title": "اطلاعاتی که درمورد این آی پی می دانیم:",
+  "faq.title": "سوالات متداول",
+  "contact.us.title": "با ما در تماس باشید",
+  "links.title": " ما را دنبال کنید در:"
 }
