intl contact us item title

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,5 +5,8 @@
   "ip.data.table.title": "Your IP Information:",
   "faq.title": "FAQ",
   "contact.us.title": "Contact Us",
+  "contact.us.phone": "Phone:",
+  "contact.us.email": "Email:",
+  "contact.us.support": "Support:",
   "links.title": "Follow Us:"
 }
