--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -5,5 +5,8 @@
   "ip.data.table.title": "اطلاعاتی که درمورد این آی پی می دانیم:",
   "faq.title": "سوالات متداول",
   "contact.us.title": "با ما در تماس باشید",
+  "contact.us.phone": "شماره تماس:",
+  "contact.us.email": "پست الکترونیک:",
+  "contact.us.support": "پشتیبانی فنی:",
   "links.title": " ما را دنبال کنید در:"
 }
