--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,5 +8,9 @@
   "contact.us.phone": "Phone:",
   "contact.us.email": "Email:",
   "contact.us.support": "Support:",
-  "links.title": "Follow Us:"
+  "links.title": "Follow Us:",
+  "links.dnj.holding": "DJN Holding",
+  "links.jey.server": "Jey Server",
+  "links.web.shot": "WebShot",
+  "links.jeo.dns": "JeoDNS"
 }
