--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -8,5 +8,9 @@
   "contact.us.phone": "شماره تماس:",
   "contact.us.email": "پست الکترونیک:",
   "contact.us.support": "پشتیبانی فنی:",
-  "links.title": " ما را دنبال کنید در:"
+  "links.title": " ما را دنبال کنید در:",
+  "links.dnj.holding": "هلدینگ داده نگار جی",
+  "links.jey.server": "جی سرور",
+  "links.web.shot": "وب شات",
+  "links.jeo.dns": "JeoDns"
 }
