inlt ip informations location title

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,6 +2,7 @@
   "brand.subtitle": "IP information's Tool",
   "ip.informations.title": "Your IP:",
   "ip.informations.btn": "General",
+  "ip.informations.location": "Location",
   "ip.data.table.title": "Your IP Information:",
   "faq.title": "FAQ",
   "contact.us.title": "Contact Us",
