--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -2,6 +2,7 @@
   "brand.subtitle": "ابزاری برای دریافت اطلاعات آی پی",
   "ip.informations.title": "آی پی عمومی شما در حال حاضر:",
   "ip.informations.btn": "عمومی",
+  "ip.informations.location": "موقعیت جغرافیایی",
   "ip.data.table.title": "اطلاعاتی که درمورد این آی پی می دانیم:",
   "faq.title": "سوالات متداول",
   "contact.us.title": "با ما در تماس باشید",
