fetch ip & ip information

--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -3,6 +3,7 @@
   "ip.informations.title": "آی پی عمومی شما در حال حاضر:",
   "ip.informations.btn": "عمومی",
   "ip.informations.location": "موقعیت جغرافیایی",
+  "ip.informations.subnet": "Subnet",
   "ip.data.table.title": "اطلاعاتی که درمورد این آی پی می دانیم:",
   "faq.title": "سوالات متداول",
   "contact.us.title": "با ما در تماس باشید",
