--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,6 +3,7 @@
   "ip.informations.title": "Your IP:",
   "ip.informations.btn": "General",
   "ip.informations.location": "Location",
+  "ip.informations.subnet": "Subnet",
   "ip.data.table.title": "Your IP Information:",
   "faq.title": "FAQ",
   "contact.us.title": "Contact Us",
