update ip data table title

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -5,6 +5,17 @@
   "ip.informations.location": "Location",
   "ip.informations.subnet": "Subnet",
   "ip.data.table.title": "Your IP Information:",
+  "ip.data.table.ip": "IP Address",
+  "ip.data.table.ip.numeric": "Numeric IP Address",
+  "ip.data.table.country": "Country",
+  "ip.data.table.longitude": "Longitude",
+  "ip.data.table.latitude": "Latitude",
+  "ip.data.table.asn": "ASN",
+  "ip.data.table.asn.organization": "ASN (organization)",
+  "ip.data.table.hostname": "Hostname",
+  "ip.data.table.user.agent": "User agent",
+  "ip.data.table.user.agent.comment": "User agent: Comment",
+  "ip.data.table.user.agent.raw": "User agent: Raw",
   "faq.title": "FAQ",
   "contact.us.title": "Contact Us",
   "contact.us.phone": "Phone:",
