--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -5,6 +5,17 @@
   "ip.informations.location": "موقعیت جغرافیایی",
   "ip.informations.subnet": "Subnet",
   "ip.data.table.title": "اطلاعاتی که درمورد این آی پی می دانیم:",
+  "ip.data.table.ip": "آدرس آی پی",
+  "ip.data.table.ip.numeric": "آدرس آی پی عددی",
+  "ip.data.table.country": "کشور",
+  "ip.data.table.longitude": "طول جغرافیایی",
+  "ip.data.table.latitude": "عرض جغرافیایی",
+  "ip.data.table.asn": "ASN",
+  "ip.data.table.asn.organization": "ASN (organization)",
+  "ip.data.table.hostname": "Hostname",
+  "ip.data.table.user.agent": "User agent",
+  "ip.data.table.user.agent.comment": "User agent: Comment",
+  "ip.data.table.user.agent.raw": "User agent: Raw",
   "faq.title": "سوالات متداول",
   "contact.us.title": "با ما در تماس باشید",
   "contact.us.phone": "شماره تماس:",
