--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -17,6 +17,18 @@
   "ip.data.table.user.agent.comment": "User agent: Comment",
   "ip.data.table.user.agent.raw": "User agent: Raw",
   "faq.title": "سوالات متداول",
+  "faq.questions": [
+    "چجوری میتونم مشخص کنم از کدام ورژن از آی پی استفاده شود؟",
+    "چگونه میتوانم این اطلاعات رو به صورت JSON دریافت کنم؟",
+    "آیا استفاده از این ابزار در برنامه ها مجاز است؟",
+    "آیا میتوانم به صورت اختصاصی این ابزار را برای خودم راه اندازی کنم؟"
+  ],
+  "faq.answers": [
+    "از سال 2018-07-25 مشخص کردن ورژن آی پی در پروتوکل ها منسوخ شده و امکان پذیر نمیباشد. ولیکن میتوانید در صورت داشتن امکان با استفاده از پارامتر درست در برنامه‌ای که استفاده میکنید، ورژن آی پی را تعیین کنید. برای مثال در فرمان curl میتوانید با پارامتر های 4- و 6- مشخص کنید از کدام ورژن آی پی که دارید استفاده شود.",
+    "با تنظیم پارامتر هدر درخواست برابر application/json میتوانید اطلاعات را به صورت JSON دریافت کنید.",
+    "بله، تا زمانی که تعداد درخواست های شما از حد معینی بیشتر نشود و فشار بر روی سرور های ما ایجاد نکند، میتوانید از این ابزار در برنامه ها استفاده کنید. در برنامه هایتان سعی کنید در هر دقیقه بیشتر از یک درخواست ارسال نکنید. در صورتیکه درخواست های شما بیشتر شود، تا مدتی از ایجاد درخواست جدید از طرف شما جلوگیری خواهد شد.",
+    "بله، میتوانید با استفاده از شماره های تماس با ما در ارتباط باشید و ما ابزار اختصاصی خودتان را راه اندازی خواهیم کرد."
+  ],
   "contact.us.title": "با ما در تماس باشید",
   "contact.us.phone": "شماره تماس:",
   "contact.us.email": "پست الکترونیک:",
