add click here to intl jsons

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -33,6 +33,7 @@
   "contact.us.phone": "Phone:",
   "contact.us.email": "Email:",
   "contact.us.support": "Support:",
+  "contact.us.click": "Click here",
   "links.title": "Follow Us:",
   "links.dnj.holding": "DJN Holding",
   "links.jey.server": "Jey Server",
