--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -33,6 +33,7 @@
   "contact.us.phone": "شماره تماس:",
   "contact.us.email": "پست الکترونیک:",
   "contact.us.support": "پشتیبانی فنی:",
+  "contact.us.click": "کلیک کنید",
   "links.title": " ما را دنبال کنید در:",
   "links.dnj.holding": "هلدینگ داده نگار جی",
   "links.jey.server": "جی سرور",
