--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -52,5 +52,6 @@
   "ip.api.items.port": "port",
   "ip.api.input.title": "بررسی آی پی دیگر (اختیاری)",
   "ip.api.input.check": "بررسی",
-  "ip.api.input.placeholder": "آی پی مورد نظر"
+  "ip.api.input.placeholder": "آی پی مورد نظر",
+  "ip.api.copied": "کپی شد"
 }
