--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -53,5 +53,6 @@
   "ip.api.input.title": "بررسی آی پی دیگر (اختیاری)",
   "ip.api.input.check": "بررسی",
   "ip.api.input.placeholder": "آی پی مورد نظر",
+  "ip.api.result.error": "خطا! لطفا مجدد امتحان کنید",
   "ip.api.copied": "کپی شد"
 }
