replace country with location

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -44,7 +44,7 @@
   "ip.api.title": "How to use our API!",
   "ip.api.subtitle": "Through the following options, you can see how to use each item and its result:",
   "ip.api.items.ip": "IP",
-  "ip.api.items.location": "Location",
+  "ip.api.items.country": "Country",
   "ip.api.items.country.iso": "Country iso",
   "ip.api.items.city": "City",
   "ip.api.items.asn": "ASN",
