fixed DNJ typography issue

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -37,7 +37,7 @@
   "contact.us.support": "Support:",
   "contact.us.click": "Click here",
   "links.title": "Follow Us:",
-  "links.dnj.holding": "DJN Holding",
+  "links.dnj.holding": "DNJ Holding",
   "links.jey.server": "Jey Server",
   "links.web.shot": "WebShot",
   "links.jeo.dns": "JeoDNS",
